--- a/Jellyfin/Views/ItemDetails.xaml
+++ b/Jellyfin/Views/ItemDetails.xaml
@@ -65,7 +65,7 @@
                         </StackPanel>
                         <StackPanel
                             Orientation="Horizontal">
-                            <Button
+                            <Button 
                                 Margin="0 8 0 8"
                                 Click="{x:Bind ViewModel.Play}">
                                 <Interactivity:Interaction.Behaviors>
@@ -100,6 +100,30 @@
                             </Button>
                         </StackPanel>
                     </StackPanel>
+                    <ComboBox
+                        Header="Version"
+                        ItemsSource="{x:Bind ViewModel.SourceContainers, Mode=OneWay}"
+                        DisplayMemberPath="Name"
+                        SelectedItem="{x:Bind ViewModel.SelectedSourceContainer, Mode=TwoWay}" />
+                    <ComboBox
+                        Header="Video"
+                        ItemsSource="{x:Bind ViewModel.VideoStreams, Mode=OneWay}"
+                        DisplayMemberPath="DisplayText"
+                        SelectedItem="{x:Bind ViewModel.SelectedVideoStream, Mode=TwoWay}" />
+                    <ComboBox
+                        Header="Audio"
+                        ItemsSource="{x:Bind ViewModel.AudioStreams, Mode=OneWay}"
+                        DisplayMemberPath="DisplayText"
+                        SelectedItem="{x:Bind ViewModel.SelectedAudioStream, Mode=TwoWay}" />
+                    <ComboBox
+                        Header="Subtitles"
+                        ItemsSource="{x:Bind ViewModel.SubtitleStreams, Mode=OneWay}"
+                        DisplayMemberPath="DisplayText"
+                        SelectedItem="{x:Bind ViewModel.SelectedSubtitleStream, Mode=TwoWay}" />
+                    <TextBlock
+                        Text="{x:Bind ViewModel.TagLine, Mode=OneWay}"
+                        TextWrapping="WrapWholeWords"
+                        Margin="0 10 0 0" />
                     <TextBlock
                         Text="{x:Bind ViewModel.Overview, Mode=OneWay}"
                         TextWrapping="WrapWholeWords"
