--- a/Jellyfin/Views/ItemDetails.xaml
+++ b/Jellyfin/Views/ItemDetails.xaml
@@ -100,26 +100,58 @@
                             </Button>
                         </StackPanel>
                     </StackPanel>
-                    <ComboBox
-                        Header="Version"
-                        ItemsSource="{x:Bind ViewModel.SourceContainers, Mode=OneWay}"
-                        DisplayMemberPath="Name"
-                        SelectedItem="{x:Bind ViewModel.SelectedSourceContainer, Mode=TwoWay}" />
-                    <ComboBox
-                        Header="Video"
-                        ItemsSource="{x:Bind ViewModel.VideoStreams, Mode=OneWay}"
-                        DisplayMemberPath="DisplayText"
-                        SelectedItem="{x:Bind ViewModel.SelectedVideoStream, Mode=TwoWay}" />
-                    <ComboBox
-                        Header="Audio"
-                        ItemsSource="{x:Bind ViewModel.AudioStreams, Mode=OneWay}"
-                        DisplayMemberPath="DisplayText"
-                        SelectedItem="{x:Bind ViewModel.SelectedAudioStream, Mode=TwoWay}" />
-                    <ComboBox
-                        Header="Subtitles"
-                        ItemsSource="{x:Bind ViewModel.SubtitleStreams, Mode=OneWay}"
-                        DisplayMemberPath="DisplayText"
-                        SelectedItem="{x:Bind ViewModel.SelectedSubtitleStream, Mode=TwoWay}" />
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <TextBlock
+                            Text="Version"
+                            Grid.Row="0"
+                            Grid.Column="0" />
+                        <ComboBox
+                            ItemsSource="{x:Bind ViewModel.SourceContainers, Mode=OneWay}"
+                            DisplayMemberPath="Name"
+                            SelectedItem="{x:Bind ViewModel.SelectedSourceContainer, Mode=TwoWay}"
+                            Grid.Row="0"
+                            Grid.Column="1" />
+                        <TextBlock
+                            Text="Video"
+                            Grid.Row="1"
+                            Grid.Column="0" />
+                        <ComboBox
+                            ItemsSource="{x:Bind ViewModel.VideoStreams, Mode=OneWay}"
+                            DisplayMemberPath="DisplayText"
+                            SelectedItem="{x:Bind ViewModel.SelectedVideoStream, Mode=TwoWay}"
+                            Grid.Row="1"
+                            Grid.Column="1" />
+                        <TextBlock
+                            Text="Audio"
+                            Grid.Row="2"
+                            Grid.Column="0" />
+                        <ComboBox
+                            ItemsSource="{x:Bind ViewModel.AudioStreams, Mode=OneWay}"
+                            DisplayMemberPath="DisplayText"
+                            SelectedItem="{x:Bind ViewModel.SelectedAudioStream, Mode=TwoWay}"
+                            Grid.Row="2"
+                            Grid.Column="1" />
+                        <TextBlock
+                            Text="Subtitles"
+                            Grid.Row="3"
+                            Grid.Column="0" />
+                        <ComboBox
+                            ItemsSource="{x:Bind ViewModel.SubtitleStreams, Mode=OneWay}"
+                            DisplayMemberPath="DisplayText"
+                            SelectedItem="{x:Bind ViewModel.SelectedSubtitleStream, Mode=TwoWay}"
+                            Grid.Row="3"
+                            Grid.Column="1" />
+                    </Grid>
                     <TextBlock
                         Text="{x:Bind ViewModel.TagLine, Mode=OneWay}"
                         TextWrapping="WrapWholeWords"
@@ -128,7 +160,7 @@
                         Text="{x:Bind ViewModel.Overview, Mode=OneWay}"
                         TextWrapping="WrapWholeWords"
                         Margin="0 10 0 0" />
-                    <!-- TODO: Make into links -->
+                    <!-- TODO: Make into links? -->
                     <TextBlock
                         Text="{x:Bind ViewModel.Tags, Mode=OneWay}"
                         TextWrapping="WrapWholeWords"
